Sim MLP ran on Alien.

--- a/Notebooks/Jas_302_Sim_MLP.ipynb
+++ b/Notebooks/Jas_302_Sim_MLP.ipynb
@@ -1022,13 +1022,7 @@
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6217 - accuracy: 0.6537 - val_loss: 0.6155 - val_accuracy: 0.6607\n",
       "Epoch 149/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6229 - accuracy: 0.6505 - val_loss: 0.6154 - val_accuracy: 0.6614\n",
-      "Epoch 150/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 150/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6257 - accuracy: 0.6514 - val_loss: 0.6156 - val_accuracy: 0.6613\n",
       "Epoch 151/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6246 - accuracy: 0.6483 - val_loss: 0.6151 - val_accuracy: 0.6615\n",
@@ -1387,13 +1381,7 @@
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6267 - accuracy: 0.6496 - val_loss: 0.6156 - val_accuracy: 0.6582\n",
       "Epoch 110/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6274 - accuracy: 0.6465 - val_loss: 0.6149 - val_accuracy: 0.6582\n",
-      "Epoch 111/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 111/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6268 - accuracy: 0.6489 - val_loss: 0.6146 - val_accuracy: 0.6600\n",
       "Epoch 112/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.6283 - accuracy: 0.6453 - val_loss: 0.6136 - val_accuracy: 0.6598\n",
