Alien ran pretrained model on GenCode.

--- a/Notebooks/Jas_304_Sim_MLP.ipynb
+++ b/Notebooks/Jas_304_Sim_MLP.ipynb
@@ -774,13 +774,7 @@
       "Epoch 44/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5275 - accuracy: 0.7378 - val_loss: 0.4801 - val_accuracy: 0.7767\n",
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
-      "Epoch 45/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 45/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.5303 - accuracy: 0.7352 - val_loss: 0.4787 - val_accuracy: 0.7768\n",
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
       "Epoch 46/200\n",
@@ -1018,13 +1012,7 @@
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4857 - accuracy: 0.7683 - val_loss: 0.4555 - val_accuracy: 0.7882\n",
       "Epoch 139/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4842 - accuracy: 0.7674 - val_loss: 0.4536 - val_accuracy: 0.7905\n",
-      "Epoch 140/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 140/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4845 - accuracy: 0.7671 - val_loss: 0.4522 - val_accuracy: 0.7896\n",
       "Epoch 141/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4853 - accuracy: 0.7680 - val_loss: 0.4511 - val_accuracy: 0.7893\n",
@@ -2183,7 +2171,7 @@
     "print(\"Accuracy on test data.\")\n",
     "show_time()\n",
     "show_test_AUC(last_model,X_test,y_test)\n",
-    "show_test_accuracy(last_model,X_test,y_test)\n",
+    "show_test_accuracy(last_model,X_test,y_test)   # Doh! last_model should be best_model\n",
     "show_time()"
    ]
   },
