Add length filter to GenCode loader.

--- a/Notebooks/Jas_308_GenCode_MLP.ipynb
+++ b/Notebooks/Jas_308_GenCode_MLP.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "# MLP ORF to GenCode \n",
     "\n",
-    "Use GenCode 38 and length-restricted data.  \n",
-    "Use model pre-trained on Simulated ORF.  "
+    "Use GenCode 38 and unrestricted data.  \n",
+    "Use model pre-trained on Simulated ORF.  \n",
+    "Exceeds RAM and crashes caused by storing RNAs in numpy array.  "
    ]
   },
   {
