Update recent notebooks to match refactoring.

--- a/Notebooks/Jas_301_Sim_MLP.ipynb
+++ b/Notebooks/Jas_301_Sim_MLP.ipynb
@@ -143,6 +143,10 @@
     "    with open('KmerTools.py', 'w') as f:\n",
     "        f.write(r.text)  \n",
     "    from KmerTools import KmerTools\n",
+    "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/DataPrep.py')\n",
+    "    with open('DataPrep.py', 'w') as f:\n",
+    "        f.write(r.text)  \n",
+    "    from DataPrep import DataPrep\n",
     "else:\n",
     "        print(\"CoLab not working. On my PC, use relative paths.\")\n",
     "        DATAPATH='data/'  # must end in \"/\"\n",
@@ -150,6 +154,7 @@
     "        from SimTools.RNA_describe import ORF_counter\n",
     "        from SimTools.RNA_gen import Collection_Generator, Transcript_Oracle\n",
     "        from SimTools.KmerTools import KmerTools\n",
+    "        from SimTools.DataPrep import DataPrep\n",
     "BESTMODELPATH=DATAPATH+\"BestModel\"  # saved on cloud instance and lost after logout\n",
     "LASTMODELPATH=DATAPATH+\"LastModel\"  # saved on Google Drive but requires login"
    ]
@@ -230,26 +235,13 @@
     }
    ],
    "source": [
-    "# Describe the sequences\n",
-    "def describe_sequences(list_of_seq):\n",
-    "    oc = ORF_counter()\n",
-    "    num_seq = len(list_of_seq)\n",
-    "    rna_lens = np.zeros(num_seq)\n",
-    "    orf_lens = np.zeros(num_seq)\n",
-    "    for i in range(0,num_seq):\n",
-    "        rna_len = len(list_of_seq[i])\n",
-    "        rna_lens[i] = rna_len\n",
-    "        oc.set_sequence(list_of_seq[i])\n",
-    "        orf_len = oc.get_max_orf_len()\n",
-    "        orf_lens[i] = orf_len\n",
-    "    print (\"Average RNA length:\",rna_lens.mean())\n",
-    "    print (\"Average ORF length:\",orf_lens.mean())\n",
-    "    \n",
     "print(\"Simulated sequence characteristics:\")\n",
+    "oc = ORF_counter()\n",
     "print(\"PC seqs\")\n",
-    "describe_sequences(pc_all)\n",
+    "oc.describe_sequences(pc_all)\n",
     "print(\"NC seqs\")\n",
-    "describe_sequences(nc_all)\n",
+    "oc.describe_sequences(nc_all)\n",
+    "oc=None\n",
     "show_time()"
    ]
   },
@@ -284,24 +276,13 @@
     }
    ],
    "source": [
-    "def combine_pos_and_neg(seqs1,seqs0):\n",
-    "    len1=len(seqs1)\n",
-    "    len0=len(seqs0)\n",
-    "    L1=np.ones(len1,dtype=np.int8)\n",
-    "    L0=np.zeros(len0,dtype=np.int8)\n",
-    "    S1 = np.asarray(seqs1)\n",
-    "    S0 = np.asarray(seqs0)\n",
-    "    all_labels = np.concatenate((L1,L0))\n",
-    "    all_seqs = np.concatenate((S1,S0))  \n",
-    "    #X = shuffle(all_seqs,random_state=3) # sklearn.utils.shuffle \n",
-    "    #y = shuffle(all_labels,random_state=3) # sklearn.utils.shuffle \n",
-    "    X,y = shuffle(all_seqs,all_labels) # sklearn.utils.shuffle \n",
-    "    return X,y\n",
-    "Xseq,y=combine_pos_and_neg(pc_all,nc_all)\n",
-    "print(\"The first few shuffled labels:\")\n",
-    "print(y[:30])\n",
+    "dp = DataPrep()\n",
+    "Xseq,y=dp.combine_pos_and_neg(pc_all,nc_all)\n",
+    "nc_all=None\n",
     "pc_all=None\n",
     "nc_all=None\n",
+    "print(\"The first few shuffled labels:\")\n",
+    "print(y[:30])\n",
     "show_time()"
    ]
   },
@@ -371,27 +352,9 @@
     }
    ],
    "source": [
-    "def seqs_to_kmer_freqs(seqs,max_K):\n",
-    "    tool = KmerTools()  # from SimTools\n",
-    "    collection = []\n",
-    "    debug = 0\n",
-    "    for seq in seqs:\n",
-    "        counts = tool.make_dict_upto_K(max_K)\n",
-    "        # Last param should be True when using Harvester.\n",
-    "        counts = tool.update_count_one_K(counts,max_K,seq,True)\n",
-    "        # Given counts for K=3, Harvester fills in counts for K=1,2.\n",
-    "        counts = tool.harvest_counts_from_K(counts,max_K)\n",
-    "        fdict = tool.count_to_frequency(counts,max_K)\n",
-    "        freqs = list(fdict.values())\n",
-    "        collection.append(freqs)\n",
-    "        if (debug<3):\n",
-    "            print(fdict)\n",
-    "            debug += 1;\n",
-    "    return np.asarray(collection)\n",
-    "Xfrq=seqs_to_kmer_freqs(Xseq,MAX_K)\n",
-    "print(\"First few K-mer frequency matrices:\")\n",
-    "print(Xfrq[:3])\n",
+    "Xfrq=KmerTools.seqs_to_kmer_freqs(Xseq,MAX_K)\n",
     "Xseq = None\n",
+    "y=np.asarray(y)\n",
     "show_time()"
    ]
   },
@@ -2160,7 +2123,7 @@
     "print(\"Accuracy on test data.\")\n",
     "show_time()\n",
     "show_test_AUC(last_model,X_test,y_test)\n",
-    "show_test_accuracy(last_model,X_test,y_test)\n",
+    "show_test_accuracy(best_model,X_test,y_test)\n",
     "show_time()"
    ]
   },
