--- a/Notebooks/Jas_309_Refactor.ipynb
+++ b/Notebooks/Jas_309_Refactor.ipynb
@@ -315,10 +315,11 @@
    "source": [
     "dp = DataPrep()\n",
     "Xseq,y=dp.combine_pos_and_neg(pc_all,nc_all)\n",
-    "print(\"The first few shuffled labels:\")\n",
-    "print(y[:30])\n",
+    "nc_all=None\n",
     "pc_all=None\n",
     "nc_all=None\n",
+    "print(\"The first few shuffled labels:\")\n",
+    "print(y[:30])\n",
     "show_time()"
    ]
   },
