--- a/Notebooks/Jas_305_Sim_MLP.ipynb
+++ b/Notebooks/Jas_305_Sim_MLP.ipynb
@@ -83,8 +83,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.utils import shuffle \n",
+    " \n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import roc_curve\n",
@@ -136,23 +135,28 @@
     "    with open('RNA_describe.py', 'w') as f:\n",
     "        f.write(r.text)  \n",
     "    from RNA_describe import ORF_counter\n",
-    "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/RNA_gen.py')\n",
-    "    with open('RNA_gen.py', 'w') as f:\n",
+    "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/GenCodeTools.py')\n",
+    "    with open('GenCodeTools.py', 'w') as f:\n",
     "        f.write(r.text)  \n",
-    "    from RNA_gen import Collection_Generator, Transcript_Oracle\n",
+    "    from GenCodeTools import GenCodeLoader\n",
     "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/KmerTools.py')\n",
     "    with open('KmerTools.py', 'w') as f:\n",
     "        f.write(r.text)  \n",
     "    from KmerTools import KmerTools\n",
+    "    r = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/DataPrep.py')\n",
+    "    with open('DataPrep.py', 'w') as f:\n",
+    "        f.write(r.text)  \n",
+    "    from DataPrep import DataPrep\n",
     "else:\n",
     "        print(\"CoLab not working. On my PC, use relative paths.\")\n",
     "        DATAPATH='data/'  # must end in \"/\"\n",
     "        sys.path.append(\"..\") # append parent dir in order to use sibling dirs\n",
     "        from SimTools.RNA_describe import ORF_counter\n",
-    "        from SimTools.RNA_gen import Collection_Generator, Transcript_Oracle\n",
+    "        from SimTools.GenCodeTools import GenCodeLoader\n",
     "        from SimTools.KmerTools import KmerTools\n",
-    "BESTMODELPATH=DATAPATH+\"BestModel\"  # saved on cloud instance and lost after logout\n",
-    "LASTMODELPATH=DATAPATH+\"LastModel\"  # saved on Google Drive but requires login"
+    "        from SimTools.DataPrep import DataPrep\n",
+    "BESTMODELPATH=DATAPATH+\"BestModel\"  \n",
+    "LASTMODELPATH=DATAPATH+\"LastModel\"  "
    ]
   },
   {
@@ -231,26 +235,13 @@
     }
    ],
    "source": [
-    "# Describe the sequences\n",
-    "def describe_sequences(list_of_seq):\n",
-    "    oc = ORF_counter()\n",
-    "    num_seq = len(list_of_seq)\n",
-    "    rna_lens = np.zeros(num_seq)\n",
-    "    orf_lens = np.zeros(num_seq)\n",
-    "    for i in range(0,num_seq):\n",
-    "        rna_len = len(list_of_seq[i])\n",
-    "        rna_lens[i] = rna_len\n",
-    "        oc.set_sequence(list_of_seq[i])\n",
-    "        orf_len = oc.get_max_orf_len()\n",
-    "        orf_lens[i] = orf_len\n",
-    "    print (\"Average RNA length:\",rna_lens.mean())\n",
-    "    print (\"Average ORF length:\",orf_lens.mean())\n",
-    "    \n",
     "print(\"Simulated sequence characteristics:\")\n",
+    "oc = ORF_counter()\n",
     "print(\"PC seqs\")\n",
-    "describe_sequences(pc_all)\n",
+    "oc.describe_sequences(pc_all)\n",
     "print(\"NC seqs\")\n",
-    "describe_sequences(nc_all)\n",
+    "oc.describe_sequences(nc_all)\n",
+    "oc=None\n",
     "show_time()"
    ]
   },
@@ -285,24 +276,13 @@
     }
    ],
    "source": [
-    "def combine_pos_and_neg(seqs1,seqs0):\n",
-    "    len1=len(seqs1)\n",
-    "    len0=len(seqs0)\n",
-    "    L1=np.ones(len1,dtype=np.int8)\n",
-    "    L0=np.zeros(len0,dtype=np.int8)\n",
-    "    S1 = np.asarray(seqs1)\n",
-    "    S0 = np.asarray(seqs0)\n",
-    "    all_labels = np.concatenate((L1,L0))\n",
-    "    all_seqs = np.concatenate((S1,S0))  \n",
-    "    #X = shuffle(all_seqs,random_state=3) # sklearn.utils.shuffle \n",
-    "    #y = shuffle(all_labels,random_state=3) # sklearn.utils.shuffle \n",
-    "    X,y = shuffle(all_seqs,all_labels) # sklearn.utils.shuffle \n",
-    "    return X,y\n",
-    "Xseq,y=combine_pos_and_neg(pc_all,nc_all)\n",
-    "print(\"The first few shuffled labels:\")\n",
-    "print(y[:30])\n",
+    "dp = DataPrep()\n",
+    "Xseq,y=dp.combine_pos_and_neg(pc_all,nc_all)\n",
+    "nc_all=None\n",
     "pc_all=None\n",
     "nc_all=None\n",
+    "print(\"The first few shuffled labels:\")\n",
+    "print(y[:30])\n",
     "show_time()"
    ]
   },
@@ -372,27 +352,9 @@
     }
    ],
    "source": [
-    "def seqs_to_kmer_freqs(seqs,max_K):\n",
-    "    tool = KmerTools()  # from SimTools\n",
-    "    collection = []\n",
-    "    debug = 0\n",
-    "    for seq in seqs:\n",
-    "        counts = tool.make_dict_upto_K(max_K)\n",
-    "        # Last param should be True when using Harvester.\n",
-    "        counts = tool.update_count_one_K(counts,max_K,seq,True)\n",
-    "        # Given counts for K=3, Harvester fills in counts for K=1,2.\n",
-    "        counts = tool.harvest_counts_from_K(counts,max_K)\n",
-    "        fdict = tool.count_to_frequency(counts,max_K)\n",
-    "        freqs = list(fdict.values())\n",
-    "        collection.append(freqs)\n",
-    "        if (debug<3):\n",
-    "            print(fdict)\n",
-    "            debug += 1;\n",
-    "    return np.asarray(collection)\n",
-    "Xfrq=seqs_to_kmer_freqs(Xseq,MAX_K)\n",
-    "print(\"First few K-mer frequency matrices:\")\n",
-    "print(Xfrq[:3])\n",
+    "Xfrq=KmerTools.seqs_to_kmer_freqs(Xseq,MAX_K)\n",
     "Xseq = None\n",
+    "y=np.asarray(y)\n",
     "show_time()"
    ]
   },
@@ -774,13 +736,7 @@
       "Epoch 43/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4943 - accuracy: 0.7593 - val_loss: 0.4661 - val_accuracy: 0.7803\n",
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
-      "Epoch 44/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 44/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.4937 - accuracy: 0.7603 - val_loss: 0.4657 - val_accuracy: 0.7780\n",
       "Epoch 45/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.4947 - accuracy: 0.7608 - val_loss: 0.4627 - val_accuracy: 0.7811\n",
@@ -1012,13 +968,7 @@
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
       "Epoch 149/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.4663 - accuracy: 0.7783 - val_loss: 0.4528 - val_accuracy: 0.7849\n",
-      "Epoch 150/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 150/200\n",
       "2084/2084 [==============================] - 2s 1ms/step - loss: 0.4664 - accuracy: 0.7787 - val_loss: 0.4538 - val_accuracy: 0.7836\n",
       "Epoch 151/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4698 - accuracy: 0.7761 - val_loss: 0.4529 - val_accuracy: 0.7847\n",
@@ -1255,13 +1205,7 @@
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
       "Epoch 55/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4874 - accuracy: 0.7657 - val_loss: 0.4551 - val_accuracy: 0.7861\n",
-      "Epoch 56/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 56/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4920 - accuracy: 0.7613 - val_loss: 0.4619 - val_accuracy: 0.7836\n",
       "Epoch 57/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4915 - accuracy: 0.7593 - val_loss: 0.4578 - val_accuracy: 0.7839\n",
@@ -1492,13 +1436,7 @@
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4645 - accuracy: 0.7761 - val_loss: 0.4509 - val_accuracy: 0.7865\n",
       "Epoch 164/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4660 - accuracy: 0.7762 - val_loss: 0.4547 - val_accuracy: 0.7876\n",
-      "Epoch 165/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 165/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4692 - accuracy: 0.7746 - val_loss: 0.4509 - val_accuracy: 0.7875\n",
       "Epoch 166/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.4677 - accuracy: 0.7761 - val_loss: 0.4499 - val_accuracy: 0.7877\n",
@@ -2158,7 +2096,7 @@
     "print(\"Accuracy on test data.\")\n",
     "show_time()\n",
     "show_test_AUC(last_model,X_test,y_test)\n",
-    "show_test_accuracy(last_model,X_test,y_test)\n",
+    "show_test_accuracy(best_model,X_test,y_test)\n",
     "show_time()"
    ]
   },
