ReRan on Alien.

--- a/Notebooks/Jas_309_Refactor.ipynb
+++ b/Notebooks/Jas_309_Refactor.ipynb
@@ -207,11 +207,11 @@
     "loader=GenCodeLoader()\n",
     "loader.set_label(1)\n",
     "loader.set_check_utr(True)  # ORF-restricted\n",
-    "loader.set_check_size(*PC_LENS)\n",
+    "loader.set_check_size(*PC_LENS)   # length-restricted\n",
     "pcdf=loader.load_file(PC_FULLPATH)\n",
     "print(\"PC seqs loaded:\",len(pcdf))\n",
     "loader.set_label(0)\n",
-    "loader.set_check_utr(False)\n",
+    "loader.set_check_utr(False)   # length-restricted\n",
     "loader.set_check_size(*NC_LENS)\n",
     "ncdf=loader.load_file(NC_FULLPATH)\n",
     "print(\"NC seqs loaded:\",len(ncdf))\n",
@@ -245,13 +245,13 @@
     "\n",
     "pc_all = dataframe_extract_sequence(pcdf)\n",
     "nc_all = dataframe_extract_sequence(ncdf)\n",
+    "pcdf=None\n",
+    "ncdf=None\n",
     "\n",
     "show_time()\n",
     "print(\"PC seqs pass filter:\",len(pc_all),type(pc_all))\n",
     "print(\"NC seqs pass filter:\",len(nc_all),type(nc_all))\n",
     "# Garbage collection to reduce RAM footprint\n",
-    "pcdf=None\n",
-    "ncdf=None\n",
     "\n",
     "#PC seqs pass filter: 55381\n",
     "#NC seqs pass filter: 46919"
